fixed text spacing issues on index.html

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -150,7 +150,7 @@ text-align: center;display: block; margin: 0 auto}*/
 .packlink:hover {opacity: 1}
 
 .writing {background-color:#21242B}
-.writing h2 {max-width: 750px; padding-top: 0; padding-bottom: 0; color: #fff }
+.writing h2 {max-width: 750px; padding-top: 0; padding-bottom: 40px; color: #fff }
 .writing h3 {max-width: 920px; margin-bottom: 50px; color: #fff}
 .writing-project {padding-top: 60px;padding-bottom: 140px; margin-left: 3%; margin-right: 3%;}
 .writing-project img {    float: left;    width: 31.3%;}
@@ -158,7 +158,7 @@ text-align: center;display: block; margin: 0 auto}*/
 .writing a {color: #fff}
 
 .designs {background-color:#74a1d5}
-.designs h2 {max-width: 750px; padding-top: 0; padding-bottom: 0; color: #fff }
+.designs h2 {max-width: 750px; padding-top: 0; padding-bottom: 40px; color: #fff }
 .designs h3 {max-width: 920px; margin-bottom: 50px; color: #fff}
 .designs-project {padding-top: 60px;padding-bottom: 140px; margin-left: 3%; margin-right: 3%;}
 .designs-project img {    float: left;    width: 31.3%;}
@@ -333,8 +333,8 @@ text-align: center;display: block; margin: 0 auto}*/
     /*.pack-project {padding-top: 60px;padding-bottom: 90px;}*/
     /*.writing-project {padding-top: 60px;padding-bottom: 90px; margin-left: 3%; margin-right: 3%;}*/
     .pack h2 {max-width: 960px; padding-top: 50px}
-    .designs h2 {max-width: 750px; padding-top: 50px; padding-bottom: 0; color: #fff }
-    .writing h2 {max-width: 750px; padding-top: 60px; padding-bottom: 0; color: #fff }
+    .designs h2 {max-width: 750px; padding-top: 50px; padding-bottom: 20px; color: #fff }
+    .writing h2 {max-width: 750px; padding-top: 60px; padding-bottom: 20px; color: #fff }
 }
 
 @media only screen and (min-width:1000px) {
